[package]
name = "biliapi"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "rustls" ]
native-tls = [
    "reqwest/native-tls",
    "async-tungstenite/tokio-native-tls"
]
rustls = [
    "reqwest/rustls-tls",
    "async-tungstenite/tokio-rustls"
]

[dependencies]
reqwest = { version = "0.11.3", default-features = false }
async-tungstenite = { version = "0.13.1", default-features = false }
futures = "0.3.15"
tokio = { version = "1.0", features = ["rt"] }

thiserror = "1.0.24"

log = "0.4.14"

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
byteorder = "1.4.3"
enum-repr = "0.2.6"
flate2 = { version = "1.0.20", features = ["zlib"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-test = "0.4.2"
anyhow = "1.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.19"
