[package]
name = "biliapi"
version = "0.1.13"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2021"
description = "哔哩哔哩 API 的部分实现"
license = "MIT"
homepage = "https://github.com/gwy15/biliapi"
repository = "https://github.com/gwy15/biliapi"
documentation = "https://docs.rs/biliapi/"

[[example]]
name = "record-to-file"
required-features = ["live"]

[features]
default = []
native-tls = [ "reqwest/native-tls" ]
rustls = [ "reqwest/rustls-tls" ]
live = [
    "async-tungstenite",
    "byteorder",
    "enum-repr",
    "flate2",
    "futures"
]
live-native-tls = [ "async-tungstenite/tokio-native-tls" ]
live-rustls = [ "async-tungstenite/tokio-rustls" ]

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = ["cookies", "json"] }
# 直播
async-tungstenite = { version = "0.13.1", default-features = false, optional = true }
byteorder = { version = "1.4.3", optional = true }
enum-repr = { version = "0.2.6", optional = true }
flate2 = { version = "1.0.20", features = ["zlib"], optional = true }
futures = { version = "0.3.15", optional = true }

tokio = { version = "1.0", features = ["rt"] }
thiserror = "1.0.24"
log = "0.4.14"
chrono = { version = "0.4.19", features = [ "serde" ] }

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_with = { version = "1.9.4", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
tokio-test = "0.4.2"
anyhow = "1.0"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
# 命令行和 influx
clap = { version = "3.0.14", features = ["derive"] }
# 登录
qrcode = "0.12.0"
# cookie 持久化
cookie_store = "0.15.0"
reqwest_cookie_store = "0.2.0"
